--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "1.6.0",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/material-bottom-tabs": "^5.2.19",
     "@react-navigation/stack": "^5.9.3",
@@ -50,8 +52,7 @@
     "react-redux": "^7.2.1",
     "react-swipe-card": "^0.1.4",
     "redux": "^4.0.5",
-    "yup": "^0.30.0",
-    "@react-native-community/picker": "1.6.0"
+    "yup": "^0.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
