--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-deck-swiper": "^2.0.5",
     "react-native-dynamic-deck-swiper": "0.0.9",
     "react-native-expo-fancy-alerts": "^2.1.0",
+    "react-native-fit-image": "^1.5.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
